# impl/docs/swagger.yaml
@@ -1,198 +1,9 @@
 definitions:
-  cryptosuite.LDKeyType:
-    enum:
-    - JsonWebKey2020
-    - X25519KeyAgreementKey2020
-    - Ed25519VerificationKey2020
-    - X25519KeyAgreementKey2019
-    - Ed25519VerificationKey2018
-    - EcdsaSecp256k1VerificationKey2019
-    - Multikey
-    - P256Key2021
-    - P384Key2021
-    - P521Key2021
-    - Bls12381G1Key2020
-    - Bls12381G2Key2020
-    type: string
-    x-enum-varnames:
-    - JSONWebKey2020Type
-    - X25519KeyAgreementKey2020
-    - Ed25519VerificationKey2020
-    - X25519KeyAgreementKey2019
-    - Ed25519VerificationKey2018
-    - ECDSASECP256k1VerificationKey2019
-    - MultikeyType
-    - P256Key2021
-    - P384Key2021
-    - P521Key2021
-    - BLS12381G1Key2020
-    - BLS12381G2Key2020
-  did.Document:
-    properties:
-      '@context': {}
-      alsoKnownAs:
-        type: string
-      assertionMethod:
-        items: {}
-        type: array
-      authentication:
-        items: {}
-        type: array
-      capabilityDelegation:
-        items: {}
-        type: array
-      capabilityInvocation:
-        items: {}
-        type: array
-      controller:
-        type: string
-      id:
-        description: |-
-          As per https://www.w3.org/TR/did-core/#did-subject intermediate representations of DID Documents do not
-          require an ID property. The provided test vectors demonstrate IRs. As such, the property is optional.
-        type: string
-      keyAgreement:
-        items: {}
-        type: array
-      service:
-        items:
-          $ref: '#/definitions/did.Service'
-        type: array
-      verificationMethod:
-        items:
-          $ref: '#/definitions/github_com_TBD54566975_ssi-sdk_did.VerificationMethod'
-        type: array
-    type: object
-  did.Service:
-    properties:
-      accept:
-        items:
-          type: string
-        type: array
-      id:
-        type: string
-      routingKeys:
-        items:
-          type: string
-        type: array
-      serviceEndpoint:
-        description: |-
-          A string, map, or set composed of one or more strings and/or maps
-          All string values must be valid URIs
-      type:
-        type: string
-    required:
-    - id
-    - serviceEndpoint
-    - type
-    type: object
-  github_com_TBD54566975_ssi-sdk_did.VerificationMethod:
-    properties:
-      blockchainAccountId:
-        description: for PKH DIDs - https://github.com/w3c-ccg/did-pkh/blob/90b28ad3c18d63822a8aab3c752302aa64fc9382/did-pkh-method-draft.md
-        type: string
-      controller:
-        type: string
-      id:
-        type: string
-      publicKeyBase58:
-        type: string
-      publicKeyJwk:
-        allOf:
-        - $ref: '#/definitions/jwx.PublicKeyJWK'
-        description: must conform to https://datatracker.ietf.org/doc/html/rfc7517
-      publicKeyMultibase:
-        description: https://datatracker.ietf.org/doc/html/draft-multiformats-multibase-03
-        type: string
-      type:
-        $ref: '#/definitions/cryptosuite.LDKeyType'
-    required:
-    - controller
-    - id
-    - type
-    type: object
-  jwx.PublicKeyJWK:
-    properties:
-      alg:
-        type: string
-      crv:
-        type: string
-      e:
-        type: string
-      key_ops:
-        type: string
-      kid:
-        type: string
-      kty:
-        type: string
-      "n":
-        type: string
-      use:
-        type: string
-      x:
-        type: string
-      "y":
-        type: string
-    required:
-    - kty
-    type: object
-  pkg_server.DeleteDIDRequest:
-    type: object
-  pkg_server.GetDIDResponse:
-    properties:
-      did:
-        $ref: '#/definitions/did.Document'
-    type: object
   pkg_server.GetHealthCheckResponse:
     properties:
       status:
         description: Status is always equal to `OK`.
         type: string
-    type: object
-  pkg_server.GetPKARRResponse:
-    properties:
-      seq:
-        description: Seq is the sequence number for the record
-        type: integer
-      v:
-        description: V is a base64URL encoded byte array representing the V value
-          for a BEP44 request, up to 1000 bytes
-        type: string
-    required:
-    - seq
-    - v
-    type: object
-  pkg_server.ListDIDsResponse:
-    properties:
-      dids:
-        items:
-          $ref: '#/definitions/did.Document'
-        type: array
-    type: object
-  pkg_server.PublishDIDRequest:
-    type: object
-  pkg_server.PublishPKARRRequest:
-    properties:
-      k:
-        description: K is a base64URL encoded byte array representing an ed25519 public
-          key, 32 bytes
-        type: string
-      seq:
-        description: Seq is the sequence number for the record
-        type: integer
-      sig:
-        description: Sig is a base64URL encoded byte array representing an ed25519
-          signature over the payload, 64 bytes
-        type: string
-      v:
-        description: V is a base64URL encoded byte array representing the V value
-          for a BEP44 request, up to 1000 bytes
-        type: string
-    required:
-    - k
-    - seq
-    - sig
-    - v
     type: object
 host: '{{.Server.APIHost}}'
 info:
@@ -289,170 +100,4 @@ paths:
       summary: Health Check
       tags:
       - Health
-  /v1/did:
-    delete:
-      consumes:
-      - application/json
-      description: Remove a DID from the service, which stops republishing it to the
-        DHT
-      parameters:
-      - description: Delete DID Request
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/pkg_server.DeleteDIDRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-        "400":
-          description: Bad request
-          schema:
-            type: string
-        "500":
-          description: Internal server error
-          schema:
-            type: string
-      summary: Remove a DID from the service
-      tags:
-      - DID
-    get:
-      consumes:
-      - application/json
-      description: List all DIDs from the service
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/pkg_server.ListDIDsResponse'
-            type: array
-        "500":
-          description: Internal server error
-          schema:
-            type: string
-      summary: List all DIDs from the service
-      tags:
-      - DID
-    put:
-      consumes:
-      - application/json
-      description: Publishes a DID to the DHT
-      parameters:
-      - description: Publish DID Request
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/pkg_server.PublishDIDRequest'
-      produces:
-      - application/json
-      responses:
-        "202":
-          description: Accepted
-        "400":
-          description: Bad request
-          schema:
-            type: string
-        "500":
-          description: Internal server error
-          schema:
-            type: string
-      summary: Publish a DID to the DHT
-      tags:
-      - DID
-  /v1/did/{id}:
-    get:
-      consumes:
-      - application/json
-      description: Read a DID record from the DHT
-      parameters:
-      - description: did to request
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/pkg_server.GetDIDResponse'
-        "400":
-          description: Bad request
-          schema:
-            type: string
-        "500":
-          description: Internal server error
-          schema:
-            type: string
-      summary: Read a DID record from the DHT
-      tags:
-      - DID
-  /v1/pkarr:
-    put:
-      consumes:
-      - application/json
-      description: Publishes a PKARR to the DHT
-      parameters:
-      - description: Publish PKARR Request
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/pkg_server.PublishPKARRRequest'
-      produces:
-      - application/json
-      responses:
-        "202":
-          description: Accepted
-        "400":
-          description: Bad request
-          schema:
-            type: string
-        "500":
-          description: Internal server error
-          schema:
-            type: string
-      summary: Publish a PKARR to the DHT
-      tags:
-      - PKARR
-  /v1/pkarr/{id}:
-    get:
-      consumes:
-      - application/json
-      description: Read a PKARR record from the DHT
-      parameters:
-      - description: ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/pkg_server.GetPKARRResponse'
-        "400":
-          description: Bad request
-          schema:
-            type: string
-        "404":
-          description: Not found
-          schema:
-            type: string
-        "500":
-          description: Internal server error
-          schema:
-            type: string
-      summary: Read a PKARR record from the DHT
-      tags:
-      - PKARR
 swagger: "2.0"
